# twingalaxynet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml
scripts/: make_gallery.py  smoke_test.py
src/twingalaxynet/: __init__.py  __main__.py  app.py  colliders.py  constants.py  gpu_render.py  render.py  simulation.py  themes.py
